lab1/Test/L1-A-10-99.output
Error Type A at Line 8
Error Type B at Line 18
Error Type B at Line 20
Error Type A at Line 28
Error Type B at Line 39
Error Type B at Line 41
Error Type B at Line 58
