lab1/Test/L1-A-10-99.cmm
int ;
float SmxB10JD 
;
int EymzBgdWiKd7JX ( ) {
  struct Ys19TjUFR4nIQQFrW68V RX4AR ;
  struct qRIgAX7 {
  }DdJ8 , EULZDxg [ 293463414 ] = cXbG436uZo4Ir3MQ5S0 
    ^;
{
    if ( agQFlGgdE )     return ovlT4py0yk1 = ECi2Igo30IMfndxV 
      * ! bII [ L00vLCZmxOnRx5jAdEV = jVLEN71dtVVFdix || 
      TZc2 && f8G0L9aiCNkqgDsEs <= wnXKFVL4fV8RBMc + ! - 
      Q77NmKSlVfKH ( nlYS || xJ0H6fFH >= ( kQo3QgFg6KWKIjMUjZMA 
      == W8D3u - I0JyUs ( WdikIZLhbO , kmOWQm3JJWIKuseJ 
      != cb5MgLn36 - BUviQ / - ( idzbE8cBn7uIcd8 || G4aR0Sl7F6q8 
      > ( x1l < z ) ) ) * ! - cNMS9YsGwOF6j0H * - 296254817.28836276 
      ) ) . a ] / ! - 1620081083 - M ( ) ;
/ 
  }}
int <= eQKo , M6Ehysnt 

;
int ;
struct {
};
int ;
int ;
int oVZdVori ( int Rmom66TWR , int %VZe8HhRSEc0TLFuJ 
  ) {
  YSaKE4hrGmW6e ;
  if ( i )   slKKpHc0Vil ;
else   if ( luuHsuvMtpFd )   aP7PHaJbKUPIXbWNUQ ;


{
    while ( ijlJnm6FMQcpN ) {
    }
  }  while ( Ufa8Z6avx8C23 )   if ( IBC9PhBDOhSMX8MivTd6 
    )   if ( Fb )   if ( || tTZ5qV9A6BJbCQwC5Wo )   m 
    ;
else   if ( nVjDj )   yz18ErdFCmW ;] 
else   if ( FNLx4bMeFr )   kBCRJ5x3KxK ;
else   bjclqgWBDoY0uekCE2Y ;



else   wnbDm7upDQWFB ;

else   N1RAFaALuaiNV ;


}
int ;
int ;
int aitnTSaXcMR1Z9 ( int v7BDAJd ) {
}
int ;
 